deploy/k8s/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudo-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudo-ui
  template:
    metadata:
      labels:
        app: cloudo-ui
    spec:
      containers:
        - name: cloudo-ui
          image: ghcr.io/pagopa/cloudo-ui:0.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
