deploy/k8s/worker-alert-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-alert
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker-alert
  template:
    metadata:
      labels:
        app: worker-alert
    spec:
      containers:
        - name: worker-alert
          image: ghcr.io/pagopa/cloudo-worker:0.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          readinessProbe:
            httpGet:
              path: /api/healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/healthz
              port: http
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
