deploy/k8s/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudo-ui
spec:
  selector:
    app: cloudo-ui
  ports:
    - name: http
      port: 3000
      targetPort: http
