deploy/k8s/worker-local-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: worker-local
spec:
  selector:
    app: worker-local
  ports:
    - name: http
      port: 80
      targetPort: http
